some change in contact us and footer

--- a/src/views/index-sections/style.css
+++ b/src/views/index-sections/style.css
@@ -1,3 +1,11 @@
+
+.contactUs{
+    
+    font-weight: normal;
+    color: #000;
+    text-align: start;
+}
+
 .displaynonemd {
     display: block !important;
 }
@@ -13,6 +21,13 @@
     .displaynonemd {
         display: none !important;
     }
+    .contactUs{
+        display: flex;
+        justify-content: center;
+        text-align: center;
+}
+    
+
 
     .fontTitles {
         font-size: 1vh;
