--- a/src/views/index-sections/style.css
+++ b/src/views/index-sections/style.css
@@ -12,6 +12,15 @@
 .title-center-md{
 
 }
+
+.focusing{
+
+}
+.focusing:focus{
+    border-color: black !important;
+}
+
+
 @media screen and (max-width: 991px) {
     .displaynonemd {
         display: none !important;
